--- a/Brain_Network_Dynamic.ipynb
+++ b/Brain_Network_Dynamic.ipynb
@@ -226,7 +226,7 @@
    "source": [
     "import pandas as pd\n",
     "\n",
-    "df = pd.read_csv('/Users/fatemehsoleymanimoghadam/Downloads/tmeanrun_1_networks_concat.csv')\n",
+    "df = pd.read_csv('/path/your_file.csv')\n",
     "\n",
     "# Show first few rows\n",
     "df.head()\n"
